force-app/main/default/objects/Case/fields/Compensation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Amount__c</fullName>
    <label>補償金額</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>