force-app/main/default/objects/Case/fields/Escalated_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Date__c</fullName>
    <label>エスカレーション日時</label>
    <type>DateTime</type>
</CustomField>