force-app/main/default/objects/Case/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <label>エスカレーション先担当者</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>エスカレーション先ケース</relationshipLabel>
    <relationshipName>Escalated_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>