force-app/main/default/objects/Case/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <label>エスカレーション理由</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>