force-app/main/default/objects/Case/fields/Inquiry_Category__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Category__c</fullName>
    <label>問い合わせ種別</label>
    <referenceTo>Inquiry_Category__c</referenceTo>
    <relationshipLabel>ケース</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>