force-app/main/default/objects/Case/fields/Is_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Is_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>エスカレーション済み</label>
    <type>Checkbox</type>
</CustomField>