force-app/main/default/objects/Case/fields/Is_SLA_Breached__c.field-meta.xml
<CustomField>
    <fullName>Is_SLA_Breached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA超過</label>
    <type>Checkbox</type>
</CustomField>