force-app/main/default/objects/Case/fields/SLA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due_Date__c</fullName>
    <label>SLA期限</label>
    <type>DateTime</type>
</CustomField>