force-app/main/default/objects/Case/fields/SLA_Target_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Target_Hours__c</fullName>
    <label>SLA目標時間（時間）</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>