force-app/main/default/objects/Case/fields/Special_Handling_Requested__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>特別対応（補償）申請</label>
    <type>Checkbox</type>
</CustomField>