force-app/main/default/objects/Case/fields/Special_Handling_Status__c.field-meta.xml
<CustomField>
    <fullName>Special_Handling_Status__c</fullName>
    <label>特別対応ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未申請</fullName>
                <default>true</default>
                <label>未申請</label>
            </value>
            <value>
                <fullName>承認待ち</fullName>
            </value>
            <value>
                <fullName>承認済み</fullName>
            </value>
            <value>
                <fullName>却下</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>